manifest.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: pod1
# spec:
#   containers:
#   - name: nginx
#     image: registry.cluster.wik.cloud/public/echo
#     ports:
#     - containerPort: 8080

# ---

# apiVersion: apps/v1
# kind: ReplicaSet
# metadata:
#   name: replicatset
#   labels:
#     app: tp4
# spec:
#   # modify replicas according to your case
#   replicas: 4
#   selector:
#     matchLabels:
#       app: replicat-tp4
#   template:
#     metadata:
#       labels:
#         app: replicat-tp4
#     spec:
#       containers:
#       - name: pod2
#         image: registry.cluster.wik.cloud/public/echo

# ---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: deployment-tp4
spec:
  replicas: 4
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: deployment-tp4
  template:
    metadata:
      labels:
        app: deployment-tp4
    spec:
      containers:
      - name: pod3
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: deployment-tp4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-tp4
spec:
  ingressClassName: nginx
  rules:
  - host: dev-ops.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 80
